--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         <h1 class="font-bold text-[30px]">Contact</h1>
         <p>His needs result from something he wants to escape from</p>
       </div>
-      <div class="contact-address h-[400px] lg:h-[100px] flex-col lg:flex-row">
+      <div class="contact-address h-[400px] lg:h-[100px] flex-col lg:flex-row p-[20px]">
         <div class="address">
           <i class="fa-solid fa-location-dot"></i>
           <div>
