--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     >
       <h1 class="logo lg:text-[50px] md:text-[40px] text-[30px]">Portfolio</h1>
       <ul
-        class="flex items-center text-[13px] md:text-[15px] sm:gap-[25px] gap-[10px] lg:text-[16px] pr-[20px]"
+        class="flex items-center text-[13px] md:text-[15px] sm:gap-[25px] gap-[10px] lg:text-[16px]"
       >
         <a href="#">
           <li>Home</li>
