--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
         <a href=" https://rofeehart.github.io/huddle-page/"
           ><img src="./huddle.png"
         /></a>
+        <a href=" https://rofeehart.github.io/facebook/"
+          ><img src="./facebook-login.jpg"
+        /></a>
         <a href=" https://rofeehart.github.io/order-summary-component/"
           ><img src="./order.png"
         /></a>
