--- a/index.html
+++ b/index.html
@@ -157,14 +157,14 @@
         <a href=" https://rofeehart.github.io/huddle-page/"
           ><img src="./huddle.png"
         /></a>
-        <a href=" https://rofeehart.github.io/facebook/"
-          ><img src="./facebook-login.jpg"
-        /></a>
         <a href=" https://rofeehart.github.io/order-summary-component/"
           ><img src="./order.png"
         /></a>
         <a href=" https://rofeehart.github.io/clipboard-landing-page/"
           ><img src="./clipboard.png"
+        /></a>
+        <a href=" https://rofeehart.github.io/facebook/"
+          ><img src="./facebook.jpg"
         /></a>
       </div>
     </div>
